--- a/src/index.html
+++ b/src/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vanilla App Template</title>
-    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/styles.css"/>
   </head>
   <body>
-    <load ="partials/header.html" />
+
 
     <section>
       <h1>Example page title</h1>
@@ -16,8 +16,8 @@
       <img src="./img/javascript.svg" alt="" />
     </section>
 
-    <!-- Loads the specified .html file -->
-    <load ="partials/vite-promo.html" />
+    <a href="./1-timer.html">Timer</a>
+    <a href="./2-snackbar.html">Snackbar</a>
 
     <script type="module" src="./main.js"></script>
   </body>
