задание №1 ок и локально работает

--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/NewYear.css">
     <title>Page 2</title>
   </head>
   <body>
@@ -11,5 +12,17 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to page 2</h1>
     </section>
+    <div class="box">
+      <h1>До Нового року залишилось:</h1>
+      <div class="count">
+        <div class="timer"><h2 id="day">00</h2><p>Дней</p></div>
+        <div class="timer"><h2 id="hrs">00</h2><p>Часов</p></div>
+        <div class="timer"><h2 id="min">00</h2><p>Минут</p></div>
+        <div class="timer"><h2 id="sec">00</h2><p>Секунд</p></div>
+      </div>
+    </div>
+
+    <script src="./js/1-timer.js"></script>
+
   </body>
 </html>
