--- a/src/1-timer.html
+++ b/src/1-timer.html
@@ -22,7 +22,7 @@
       </div>
     </div>
 
-    <script src="./js/1-timer.js"></script>
+    <script type="module" src="./js/1-timer.js"></script>
 
   </body>
 </html>
